<resources>
    <string name="app_name">RadioButton</string>
    <string name="titulo_ventana">Uso de Radio Buton</string>
    <string name="txt_hint">Escribe Un Número</string>
    <string name="txt_resultado">El Resultado Es:</string>
    <string name="ln_sumar">Sumar</string>
    <string name="lb_restar">Restar</string>
    <string name="btn_calcular">Calcular</string>
    <string name="lb_multiplicar">Multiplicar</string>
    <string name="lb_dividir">Dividir</string>
</resources>